# gpsd2nmea2000

./: .gitmodules  CMakeLists.txt  README.md  gpsd2nmea2000.service
src/: main.cpp  timeconv.cpp
